--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,27 +7,26 @@ name = "simple_sketch"
 version = "0.0.1"
 
 authors = [
-  { name="Example Author", email="author@example.com" },
-  { name="Example2 Author2", email="author2@example.com" }
+  { name="Maher Bisan", email="maherbisan95@gmail.com" },
+  { name="Dareen Khair", email="author2@example.com" }
 ]
 
-description = "A short description of the package."
+description = "Program Synthesis by Sketching"
 
 readme = "README.md"
 
-keywords =  ["Earley", "LALR", "parser", "parsing", "ast"]
+keywords =  ["Synthesis", "CEGIS", "Program Synthesis", "Sketching", "PBE"]
 
 license = {file = "LICENSE"}
 
 requires-python = ">=3.11"
 
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
     "Operating System :: OS Independent",
 ]
 
 dependencies = [
-    # python -m pip install -r requirements.txt
     "z3-solver==4.12.2.0",
     "lark==1.1.7",
     "pyyaml",
@@ -38,7 +37,7 @@ dependencies = [
 
 [project.urls]
 "Homepage" = "https://github.com/maher-bisan/SimpleSketch"
-# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Bug Tracker" = "https://github.com/maher-bisan/SimpleSketch/issues"
 # "documentation" = ""
 
 
@@ -52,7 +51,6 @@ namespaces = false
 include-package-data = true
 
 [tool.setuptools.package-data]
-# "*" = ["*.lark", "*.md"]
 "simple_sketch" = ["*.lark", "*.md", "*.json", "*.yaml"]
 
 
