--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=>=61.2.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "simple_sketch"
+name = "SimpleSketch"
 version = "0.0.1"
 
 authors = [
@@ -15,9 +15,9 @@ description = "Program Synthesis by Sketching"
 
 readme = "README.md"
 
-keywords =  ["Synthesis", "CEGIS", "Program Synthesis", "Sketching", "PBE"]
+keywords =  ["SimpleSketch", "Synthesis", "CEGIS", "Program Synthesis", "Sketching", "PBE"]
 
-license = "MIT"
+license = {file="LICENSE"}
 
 requires-python = ">=3.11"
 
@@ -43,15 +43,17 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
-# include = ["*"]
+include = ["*"]
 namespaces = false
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.package-data]
-"simple_sketch" = ["*.lark", "*.md", "*.json", "*.yaml"]
-
+"*" = ["*.lark", "*.md", "*.json", "*.yaml"]
+simple_sketch = ["*.lark", "*.md", "*.json", "*.yaml"]
+"simple_sketch.simple_sketch_gui" = ["assets/**/*"]
+# "simple_sketch.simple_sketch_gui" = ["assets/**/*", "assets/examples/*", "assets/examples/**/*.yaml"]
 
 [project.scripts]
 simple_sketch = "simple_sketch.simple_sketch_cli:simple_sketch_cli"
@@ -66,5 +68,5 @@ dev = [
     "ipykernel==6.25.2",
     "mkdocs==1.5.3",
     "Pillow",   
-    "customtkinter",
+    "twine"
 ]
