--- a/src/simple_sketch/simple_sketch_gui/assets/examples/Advanced-Examples/example-1.yaml
+++ b/src/simple_sketch/simple_sketch_gui/assets/examples/Advanced-Examples/example-1.yaml
@@ -1,25 +1,32 @@
 program: "
 assume ( n == 5);\n
-assume ( b0 == 2);\n
-b := b0;\n
+assume ( a0 == 2);\n
+a := a0;\n
 i := 0 ;\n
 x := ??;\n
 while (i < n) { \n
-    b := b + x ; \n
+    a := a + x ; \n
     i := i + 1 ;\n
+}
+assert ( a == 2 + 3*5);\n
+Array int A;\n
+if (a - ?? < ??){\n
+    A[0] := 1;\n
 }\n
-assert ( b == 2 + 3*5);\n
+assert (A[0] == 1) ;\n
+bool b := bool?;\n
+assert (b == True);\n
 "
 input_output_examples:
   - input: 
     output: 
     vars: 
 pre_condition:
-  condition: "And(n >=0, b0 >= 0, x>=0)"
+  condition: "And(n >=0, a0 >= 0, x>=0)"
   condition_vars: 
 post_condition:
-  condition: "And(b == b0 + n * x, i ==n)"
+  condition: "And(i == n , a == a0 + n * x, b == True) --types={ b : bool }"
   condition_vars: 
 loop_inv:
-  condition: "And( i <= n, b == x*i + b0)"
+  condition: "And( i <= n, a == x*i + a0)"
   condition_vars:
